2009-03-10  Matthias Clasen  <mclasen@redhat.com>

	Bug 574622 – GtkEntry: Should we wrap icon-press and icon-release
	signals?

	* gtk/gtkentry.c: ::icon-press and ::icon-release are not
	action signals. Pointed out by Murray Cumming

2009-03-04  Michael Hasselmann <michaelh@openismus.com>

	* gtk/gtkcomboboxentry.c (gtk_combo_box_entry_contents_changed):
	Fixed regression reported in bug #574059. (search button not available in 
	some cases.) The old implementation relied on bug #572478.

2009-03-10  Alexander Larsson  <alexl@redhat.com>

        * gtk/gtkmountoperation.c:
        (gtk_mount_operation_ask_password):
	Clear all optionally created widget pointer in priv. Initially
	priv is cleared so thats ok, but on a second call we may have
	leftovers from previous calls which is problematic if for instance
	we asked for the user the first time and not the second, then we
	will access the old priv->username_entry.

2009-03-06  Michael Natterer  <mitch@gimp.org>

	* gtk/gtkscalebutton.c (gtk_scale_button_set_property): don't call
	gtk_orientable_set_orientation() because that calls g_object_set()
	again -> infinite recursion. Call gtk_scale_button_set_orientation()
	instead.

2009-03-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2009-03-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.5 ===

2009-03-02  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2009-03-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 546285 – Allow GtkEntry to draw progress

	* gtk/gtkentry.c: Improve the drawing of progress in entries,
	using fg/bg[SELECTED]. Add a progress-border style property.
	Draw progress behind icons too.
	* gtk/gtkrc.c: Add defaults for fg/bg[SELECTED] in entries.
	Patch by Benjamin Berg.

2009-03-02  Matthias Clasen  <mclasen@redhat.com>

	Bug 573688 – Don't steal update region in gtk_text_view_paint()

	* gtk/gtktextview.c (gtk_text_view_paint): If additional areas got