@@ -1279,7 +1279,7 @@ gtk_style_new
 gtk_style_render_icon
 gtk_style_set_background
 gtk_draw_insertion_cursor
-gtk_style_get_property
+gtk_style_get_style_property
 gtk_style_get_valist
 gtk_style_get
 #endif
