@@ -1,5 +1,14 @@
 2009-03-10  Matthias Clasen  <mclasen@redhat.com>
 
+	Bug 574561 – gtk_style_get "shadows" g_object_get
+
+	* gtk/gtk.symbols:
+	* gtk/gtkstyle.[hc]: Rename gtk_style_get_property to
+	gtk_style_get_style_property to avoid problems for language
+	bindings. Pointed out by Torsten Schoenfeld.
+
+2009-03-10  Matthias Clasen  <mclasen@redhat.com>
+
 	Bug 574622 – GtkEntry: Should we wrap icon-press and icon-release
 	signals?
 
